docs/versioned_docs/version-1.0.0/usage/using_blocks.mdx
---
title: "Using Blocks"
---
<!-- Generated by port_legacy_docs.py v1 from v1.0.0 (3125e5c1e7bc33b5bfd5723806e01f14810511a6). Historical snapshot—do not edit directly. -->
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Section Block {#section-block}
<a id="blocks.SectionBlock"></a>
**Class**

```python
SectionBlock(text: Optional[TextLike] = None, block_id: Optional[str] = None, fields: Optional[Union[TextLike, List[TextLike]]] = None, accessory: Optional[Element] = None)
```

<div className="api-docstring">

A section is one of the most flexible blocks available -
it can be used as a simple text block, or with any of the
available block elements.

Section blocks can also optionally be given an "accessory,"
which is typically one of the interactive [Elements](/v1.0.0/reference/elements).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `Optional[TextLike]` | text to include in the block. Can be a string or `Text` object (of either<br />`mrkdwn` or `plaintext` variety). Defaults to markdown if unspecified. One of either<br />`text` or `fields` must be provided. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |
| `fields` | `Optional[Union[TextLike, List[TextLike]]]` | a list of text objects. One of either `text` or `fields` must be provided. |
| `accessory` | `Optional[Element]` | an optional [Element](/v1.0.0/reference/elements) object that will take a<br />secondary place in the block (after or to the side of  `text` or `fields`). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation checks. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">


```python
from slackblocks import Checkboxes, Option, SectionBlock

SectionBlock(
    text="This is a section block with a checkbox accessory.", 
    block_id="fake_block_id"
    accessory=CheckboxGroup(
        action_id="checkboxes-action",
        options=[
            Option(
                text="*Your Only Option*",
                value="option_one"
            )
        ]
    )
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "section",
    "block_id": "fake_block_id",
    "text": {
        "type": "mrkdwn",
        "text": "This is a section block with a checkbox accessory."
    },
    "accessory": {
        "type": "checkboxes",
        "options": [
            {
                "text": {
                    "type": "mrkdwn",
                    "text": "*Your Only Option*"
                },
                "value": "option_one"
            }
        ],
        "action_id": "checkboxes-action"
    }
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Section Block](/img/legacy/e571b02afbd2c2af10a05d1d4cf23ef23b939f92/usage/section.png)

</TabItem>
</Tabs>
## Rich Text Block {#rich-text-block}
<a id="blocks.RichTextBlock"></a>
**Class**

```python
RichTextBlock(elements: Union[RichTextObject, List[RichTextObject]], block_id: Optional[str] = None)
```

<div className="api-docstring">

A RichTextBlock is used to provide easier rich text formatting
    than standard markdown text (e.g. in a
    [`SectionBlock`](/v1.0.0/reference/blocks#blocks.SectionBlock))
    and access to text formatting features not available in traditional
    markdown (e.g. strikethrough). See the various rich text elements
    you can include [here](/v1.0.0/reference/rich_text).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Union[RichTextObject, List[RichTextObject]]` | a single [rich text element](/v1.0.0/reference/rich_text)<br />or a list of those elements. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier<br />for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if the elements in `elements` are not valid rich<br />text elements. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblock import RichTextBlock, RichTextSection, RichText

RichTextBlock(
    RichTextSection(
        [
            RichText(
                "You 'bout to witness hip-hop in its most purest",
                bold=True,
            ),
            RichText(
                "Most rawest form, flow almost flawless",
                strike=True,
            ),
            RichText(
                "Most hardest, most honest known artist",
                italic=True,
            ),
        ]
    ),
    block_id="fake_block_id",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "rich_text",
    "block_id": "fake_block_id",
    "elements": [
        {
            "type": "rich_text_section",
            "elements": [
                {
                    "type": "text",
                    "text": "You 'bout to witness hip-hop in its most purest\n",
                    "style": {
                        "bold": true
                    }
                },
                {
                    "type": "text",
                    "text": "Most rawest form, flow almost flawless\n",
                    "style": {
                        "strike": true
                    }
                },
                {
                    "type": "text",
                    "text": "Most hardest, most honest known artist\n",
                    "style": {
                        "italic": true
                    }
                }
            ]
        }
    ]
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Rich Text Block](/img/legacy/e571b02afbd2c2af10a05d1d4cf23ef23b939f92/usage/rich_text.png)

</TabItem>
</Tabs>
## Header Block {#header-block}
<a id="blocks.HeaderBlock"></a>
**Class**

```python
HeaderBlock(text: Union[str, Text], block_id: Optional[str] = None)
```

<div className="api-docstring">

A Header Block is a plain-text block that displays in a larger, bold font.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `Union[str, Text]` | the text that will be rendered as a heading. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import HeaderBlock

HeaderBlock(
    "This is a header block",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "header",
    "text": {
        "type": "plain_text",
        "text": "This is a header block",
        "emoji": true
    }
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Header Block](/img/legacy/e571b02afbd2c2af10a05d1d4cf23ef23b939f92/usage/header.png)

</TabItem>
</Tabs>
## Image Block {#image-block}
<a id="blocks.ImageBlock"></a>
**Class**

```python
ImageBlock(image_url: str, alt_text: Optional[str] = ' ', title: Optional[Union[Text, str]] = None, block_id: Optional[str] = None)
```

<div className="api-docstring">

An Image Block contains a single graphic, accessed by URL.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `image_url` | `str` | the URL pointing to the image file you want to display. |
| `alt_text` | `Optional[str]` | alternative text for accessibility purposes and when the image fails to load. |
| `title` | `Optional[Union[Text, str]]` | an optional text title to be presented with the image. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when one or more of the provided args fails validation. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import ImageBlock

ImageBlock(
    image_url="https://api.slack.com/img/blocks/bkb_template_images/beagle.png",
    alt_text="a beagle",
    title="dog",
    block_id="fake_block_id",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "image",
    "block_id": "fake_block_id",
    "image_url": "https://api.slack.com/img/blocks/bkb_template_images/beagle.png",
    "alt_text": "a beagle",
    "title": {
        "type": "plain_text",
        "text": "dog"
    }
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Image Block](/img/legacy/e571b02afbd2c2af10a05d1d4cf23ef23b939f92/usage/image.png)

</TabItem>
</Tabs>
## Input Block {#input-block}
<a id="blocks.InputBlock"></a>
**Class**

```python
InputBlock(label: TextLike, element: Element, dispatch_action: bool = False, block_id: Optional[str] = None, hint: Optional[TextLike] = None, optional: bool = False)
```

<div className="api-docstring">

A block that collects information from users - it can hold a plain-text
input element, a checkbox element, a radio button element, a select
menu element, a multi-select menu element, or a datepicker.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `label` | `TextLike` | the name which identifies the input field. |
| `element` | `Element` | an interactive [Element](/v1.0.0/reference/elements) (e.g. a text field). |
| `dispatch_action` | `bool` | whether the [Element](/v1.0.0/reference/elements) should trigger the<br />sending of a `block_actions` payload. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |
| `hint` | `Optional[TextLike]` | an optional additional guide on what input the user should prodive. |
| `optional` | `bool` | whether this input field may be empty when the user submits e.g. the modal. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when any of the provided arguments fail validation. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import InputBlock, Text, TextType, PlainTextInput

InputBlock(
    label=Text("Label", type_=TextType.PLAINTEXT, emoji=True),
    hint=Text("Hint", type_=TextType.PLAINTEXT, emoji=True),
    element=PlainTextInput(action_id="action"),
    block_id="fake_block_id",
    optional=True,
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "input",
    "block_id": "fake_block_id",
    "label": {
        "type": "plain_text",
        "text": "Label",
        "emoji": true
    },
    "element": {
        "type": "plain_text_input",
        "action_id": "action"
    },
    "hint": {
        "type": "plain_text",
        "text": "Hint",
        "emoji": true
    },
    "optional": true
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Input Block](/img/legacy/e571b02afbd2c2af10a05d1d4cf23ef23b939f92/usage/input.png)

</TabItem>
</Tabs>
## Divider Block {#divider-block}
<a id="blocks.DividerBlock"></a>
**Class**

```python
DividerBlock(block_id: Optional[str] = None)
```

<div className="api-docstring">

A content divider, like an `&lt;hr&gt;` in HTML, to split up different blocks inside of
a message.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import DividerBlock

DividerBlock()
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "divider"
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Divider Block](/img/legacy/e571b02afbd2c2af10a05d1d4cf23ef23b939f92/usage/divider.png)

</TabItem>
</Tabs>
## File Block {#file-block}
<a id="blocks.FileBlock"></a>
**Class**

```python
FileBlock(external_id: str, block_id: Optional[str], source: str = 'remote')
```

<div className="api-docstring">

Displays a remote file (e.g. a PDF).

For details on how remote files are exposed to Slack, see
[https://api.slack.com/messaging/files#adding](https://api.slack.com/messaging/files#adding).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `external_id` | `str` | the ID assigned to the remote file when it was added to Slack. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |
| `source` | `str` | always "remote" as per the Slack API (may change in the future). |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import FileBlock

FileBlock(
    external_id="external_id",
    block_id="fake_block_id",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "file",
    "external_id": "external_id",
    "source": "remote",
    "block_id": "fake_block_id"
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an File Block](https://a.slack-edge.com/f156a3/img/api/file_upload_remote_file.png)
* Note that this example comes from the Slack Web API docs.

</TabItem>
</Tabs>
## Context Block {#context-block}
<a id="blocks.ContextBlock"></a>
**Class**

```python
ContextBlock(elements: Optional[List[Union[Element, CompositionObjectType]]] = None, block_id: Optional[str] = None)
```

<div className="api-docstring">

A `ContextBlock` displays contextul message info, including both images and text.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Optional[List[Union[Element, CompositionObjectType]]]` | a list of `Text` objects and `Image` elements. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when items in `elements` are not `Text` or `Image` or exceed 10 items. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import ContextBlock, Text

ContextBlock(
    elements=[
        Text("Hello, world!"),
    ], 
    block_id="fake_block_id"
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "context",
    "block_id": "fake_block_id",
    "elements": [
        {
            "type": "mrkdwn",
            "text": "Hello, world!"
        }
    ]
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Context Block](/img/legacy/e571b02afbd2c2af10a05d1d4cf23ef23b939f92/usage/divider.png)

</TabItem>
</Tabs>
## Actions Block {#actions-block}
<a id="blocks.ActionsBlock"></a>
**Class**

```python
ActionsBlock(elements: Optional[List[Element]] = None, block_id: Optional[str] = None)
```

<div className="api-docstring">

A `Block` that is used to hold interactive elements (normally for users to interface with).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Optional[List[Element]]` | a list of [Elements](/v1.0.0/reference/elements) (up to a maximum of 25). |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the items in `elements` are invalid. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
ActionsBlock(
    block_id="fake_block_id",
    elements=CheckboxGroup(
        action_id="actionId-0",
        options=[
            Option(text="*a*", value="a", description="*a*"),
            Option(text="*b*", value="b", description="*b*"),
            Option(text="*c*", value="c", description="*c*"),
        ],
    ),
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "actions",
    "block_id": "fake_block_id",
    "elements": [
        {
            "type": "checkboxes",
            "action_id": "actionId-0",
            "options": [
                {
                    "text": {
                        "type": "mrkdwn",
                        "text": "*a*"
                    },
                    "value": "a",
                    "description": {
                        "type": "plain_text",
                        "text": "*a*"
                    }
                },
                {
                    "text": {
                        "type": "mrkdwn",
                        "text": "*b*"
                    },
                    "value": "b",
                    "description": {
                        "type": "plain_text",
                        "text": "*b*"
                    }
                },
                {
                    "text": {
                        "type": "mrkdwn",
                        "text": "*c*"
                    },
                    "value": "c",
                    "description": {
                        "type": "plain_text",
                        "text": "*c*"
                    }
                }
            ]
        }
    ]
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Actions Block](/img/legacy/e571b02afbd2c2af10a05d1d4cf23ef23b939f92/usage/actions.png)

</TabItem>
</Tabs>
